--- a/src/components/UI/Button/button.module.css
+++ b/src/components/UI/Button/button.module.css
@@ -4,3 +4,20 @@
     background-color: none;
     border-width: 0px;
 }
+
+.HomeCarousel{
+    background-color: darkgrey;
+    justify-content: center;
+    margin: auto;
+}
+
+.Newsletter{
+    background-color: #f7f7f7;
+    margin: auto;
+}
+
+@media screen and (min-width: 420px){
+    .Button{
+        width: 300px
+    }
+}
