Added routing, product catalog, product boxes, made mobile header better

--- a/src/components/Header/DrawerToggle/DrawerToggle.module.css
+++ b/src/components/Header/DrawerToggle/DrawerToggle.module.css
@@ -100,6 +100,9 @@
     transform: translate(-7px,0);
   }
   
+  .Wrapper{
+    width:100%
+  }
 
 @media (min-width: 500px) {
     .DrawerToggle {
