--- a/src/components/Header/NavigationItems/NavgationItem/NavigationItem.module.css
+++ b/src/components/Header/NavigationItems/NavgationItem/NavigationItem.module.css
@@ -1,4 +1,49 @@
 .NavigationItem{
-    padding: 12px;
+    margin:10px 0;
     box-sizing: border-box;
+    display:block;
+    width:100%;
+    align-items: center;
+}
+
+.NavigationItem a{
+    color: black;
+    text-decoration: none;
+    width:100%;
+    display: block;
+    box-sizing: border-box;
+}
+
+.NavigationItem a:hover,
+.NavigationItem a:active,
+.NavigationItem a.active
+{
+    color: #40a4c8;
+}
+
+@media screen and (min-width:500px){
+    .NavigationItem{
+        margin:0;
+        box-sizing: border-box;
+        display:flex;
+        height:100%;
+        width:auto;
+        align-items: center;
+    }
+
+    .NavigationItem a{
+        color: black;
+        height:100%;
+        padding:16px 10px;
+        border-bottom: 4px solid transparent;
+    }
+
+    .NavigationItem a:hover,
+    .NavigationItem a:active,
+    .NavigationItem a.active
+    {
+        background-color: #c8b4a0;
+        border-bottom: 4px solid #121213;
+        color: white ;
+    }
 }
