--- a/client/src/components/Header/Account/Account.module.css
+++ b/client/src/components/Header/Account/Account.module.css
@@ -24,6 +24,12 @@
         padding: 15px
     }
 
+    .Accountbar li{
+        min-width: 60px;
+        margin: 10px;
+        box-sizing: border-box;
+    }
+
     .Icon{
         display: none;
     }
