Admin basic login, Top panel when admin is logged in

--- a/client/src/components/Admin/Products/AddNew/AddNew.module.css
+++ b/client/src/components/Admin/Products/AddNew/AddNew.module.css
@@ -4,3 +4,11 @@
     padding: 3px;
     box-sizing: border-box;
 }
+
+.View{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.View button{
+}
