--- a/client/src/components/Paystack/paystackForm.module.css
+++ b/client/src/components/Paystack/paystackForm.module.css
@@ -4,10 +4,9 @@
 
 .Form{
     border: 1px solid red;
-    width: 50%;
+    height: 280px;
     padding: 20px;
     margin: auto;
-    display: flex;
     flex-flow: column;
     /* align-self: center;
     justify-content: center; */
@@ -19,4 +18,10 @@
     width: 80%;
     height: 34px;
     border-radius: 3px;
+}
+
+@media screen and (min-width: 430px){
+    .Form{
+        min-height: 400px;
+    }
 }
