Redesigned admin dashboard, added image upload to ADD PRODUCT page, display respective product images on frontend

--- a/client/src/components/Admin/Products/AddNew/AddNew.module.css
+++ b/client/src/components/Admin/Products/AddNew/AddNew.module.css
@@ -12,3 +12,10 @@
 
 .View button{
 }
+
+.Select_Image{
+    padding: 10px;
+    border: 2px solid grey;
+    font-size: 20px;
+    border-radius: 3px;
+}
