--- a/client/src/components/Admin/Products/AddNew/AddNew.module.css
+++ b/client/src/components/Admin/Products/AddNew/AddNew.module.css
@@ -14,8 +14,17 @@
 }
 
 .Select_Image{
-    padding: 10px;
+    padding: 7px;
     border: 2px solid grey;
     font-size: 20px;
-    border-radius: 3px;
+    border-radius: 4px;
+    text-align: center;
+    width: 50%;
+    margin: auto;
+}
+
+.AddProductSuccessfull{
+    color: rgb(45, 126, 45);
+    font-size: 22px;
+    text-align: center;
 }
